<resources>
    <string name="app_name">Freelance App</string>
    <string name="expalanation">Frelence, serbest çalışanların yeteneklerini ve becerilerini kolayca pazarlayabileceği, işverenlerin ise en uygun yetenekleri keşfedebileceği yenilikçi bir platformdur. Frelence ile işlerinizi hızla tamamlayın ve serbest çalışma dünyasında yeni kapılar açın.</string>
    <string name="welcome">Welcome</string>
    <string name="hint_edittext_email">Email adresinizi girin</string>
    <string name="hint_edittext_password">Şifrenizi girin</string>
    <string name="forgot_password"><u>Şifrenizi mi unuttunuz?</u></string>
    <string name="button_login">Giriş yap</string>
    <string name="button_register">Mevcut hesabınız yok mu? <u>Kayıt olun.</u></string>
    <string name="login_with_facebook">Facebook</string>
    <string name="login_with_google">Google</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_description_text">
        HIREME, freelance dünyasına adım atmanın kolaylığını ve rahatlığını sizlere sunuyor. Profesyonelliği ve özgürlüğü bir araya getiren bu platformda, işlerinizi yönetmek ve keyifli bir çalışma ortamında bulunmak artık çok daha basit. HIREME ile freelance dünyasının tadını çıkarın!
    </string>
    <string name="text_empty_error">Boş değer girilemez</string>
    <string name="password_error">Şifre en az 6 karakter olmalıdır</string>
    <string name="email_verification_title">E-Posta Doğrulama</string>
    <string name="email_verification_message">E-Posta adresiniz doğrulanmamış.\nTekrar doğrulama e-postası gönderilmesini ister misiniz?</string>
    <string name="email_verification_error_message">Doğrulama E-postası gönderilemedi.\nTekrar doğrulama e-postası gönderilmesini ister misiniz?</string>
    <string name="email_verification_success_message">Doğrulama E-postası gönderildi.\nAdresinize gelen bağlantıya tıklayarak doğrulama işlemini tamamlayabilirsiniz.</string>
    <string name="email_forgot_password_title">Şifre Sıfırlama</string>
    <string name="email_forgot_password_message">Yeni şifrenizi oluşturmak için e-posta gönderilmesini ister misiniz.?</string>
    <string name="email_forgot_password_message_success">Şifre sıfırlama e-postası gönderildi. Adresinize gelen bağlantı üzerinden yeni şifre oluşturabilirsiniz.</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="ok">Tamam</string>
    <string name="login_dialog_error">İşlem Başarısız!</string>
    <string name="login_dialog_error_message">Hata mesajı:</string>
    <string name="app_web_client_id">926001727029-eam99mu4utbnqhv090rt4mav59sk5tef.apps.googleusercontent.com</string>
    <string name="login_title_message">Hesabınız ile giriş yapın.</string>
    <string name="save">Kaydet</string>
    <string name="create_job_posting_toolbar_title">Yeni İşveren İlanı Oluştur"</string>
    <string name="enter_budget">Bütçenizi girin</string>
    <string name="enter_deadline">İlan bitiş tarihini girin</string>
    <string name="enter_location">Freelancer çalışma şekli</string>
    <string name="enter_skills_required">Gerekli yetenekleri girin</string>
    <string name="enter_description">İlan açıklamasını girin</string>
    <string name="enter_title">Başlık girin</string>
    <string name="add">Ekle</string>
    <string name="enter_skill">Yeni yetenek ekleyin</string>
    <string name="delete">Sil</string>
    <string name="is_delete">Sil?</string>
    <string name="hint_freelancer_title">Freelancer Title</string>
    <string name="hint_freelancer_description">Freelancer Description</string>
    <string name="buy">Satın Al</string>
    <string name="give_offer">Teklif Ver</string>
    <string name="hint_employer_title">Employer Title</string>
    <string name="hint_employer_description">Employer Description</string>
    <string name="user_bio">Merhaba! Ben bir yapay zeka dil modeliyim ve çeşitli konularda yardımcı olabilirim. Bilgi tabanım, geniş bir konu yelpazesini kapsamaktadır. Sorularınızı sormaktan çekinmeyin ve size nasıl yardımcı olabileceğim konusunda bana söyleyin!</string>
    <string name="personal_info">E-posta telefon numarası ve daha fazlasını düzenleyin</string>
    <string name="service_info">Hizmet bilgilerinizi düzenleyin ve müşterilerinize neler yapabileceğinizi gösterin</string>
    <string name="options">Şifre değişikliği ve yardım talebi</string>
    <string name="urgent_text">Bu ilan acil…</string>
    <string name="text_colon">:</string>
    <string name="button_detail_text">Detay</string>
    <string name="is_urgent_text">İlan acil mi?</string>
    <string name="budget">Bütçe</string>
    <string name="description">Açıklama</string>
    <string name="location">İş Konumu</string>
    <string name="deadline">İlan Sonu</string>
    <string name="details">Ek Detaylar</string>
    <string name="create_freelance_post">Create Freelance Post</string>
    <string name="create_employer_post">Create Employer Post</string>
    <string name="create_discover_post">Create Discover Post</string>
    <string name="wage">Ücret</string>
    <string name="job_overview">İşin Özeti</string>
    <string name="aboutYou">Aranan Özellikler</string>
    <string name="works_to_be_done">Yapılması istenen işler</string>
    <string name="you_offer">Teklifin</string>
    <string name="enter_offer">Teklif ettiğiniz ücret.</string>
    <string name="enter_offer_description">Teklif açıklamanızı girin.</string>
    <string name="detail">Detay</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="level_text">Level %1$d</string>
    <string name="interstitial_ad_unit_id">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_budget_freelancer">Talep ettiğiniz ücret</string>
    <string name="enter_skills_freelancer">Verilecek diğer hizmetler</string>
    <string name="image_source">Resim Kaynağı?</string>
    <string name="open_camera">Kamerayı aç</string>
    <string name="open_gallery">Galeriyi aç</string>
    <string name="enter_tags">Etiketleri girin…</string>
    <string name="enter_description_discover">Açıklama girin…</string>
    <string name="title_create_discover_post">Yeni Gönderi Oluştur</string>
    <string name="title_create_freelancer_post">Yeni Freelancer İlanı Oluştur</string>
</resources>